Bug 1726819 - Scrollbar is present in 'Add/Edit bookmark' panel r=desktop-theme-reviewers,Itiel
Differential Revision: https://phabricator.services.mozilla.com/D123294

--- a/browser/themes/shared/places/editBookmarkPanel.inc.css
+++ b/browser/themes/shared/places/editBookmarkPanel.inc.css
@@ -13,6 +13,7 @@ html|div#editBookmarkPanelFaviconContainer {
 }
 
 #editBookmarkPanelInfoArea {
+  overflow: hidden;
   padding: 4px var(--arrowpanel-padding) 0;
 }
 
